# CPP_rtype_2018

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
rfc_doc/: page1.txt
src/client/: main.cpp
src/client/sfml/: sfml.cpp
src/server/: main.cpp  server.cpp
src/server/ecs/: ComponentManager.cpp  ECS.cpp  EntityManager.cpp  EventManager.cpp  IComponentStorage.cpp  IEventStorage.cpp  SystemManager.cpp
src/server/ecs/factory/: Alien.cpp  Bullet.cpp  Player.cpp  Wall.cpp
src/server/ecs/system/: Collision.cpp  Draw.cpp  Movement.cpp  RandomLevel.cpp  Shoot.cpp  Speed.cpp
